--- a/server/makefile
+++ b/server/makefile
@@ -1,9 +1,11 @@
-objects = pthreadpool.o server.o
+objects = pthreadpool.o server.o transmitmeg.o
 
 SWFM.o:$(objects)
 	g++ -o SWFM.o $(objects) -lpthread
 pthreadpool.o: pthreadpool.c lib/pthreadpool.h
 	g++ -c pthreadpool.c
+transmitmeg.o: transmitmeg.c lib/transmitmeg.h
+	g++ -c transmitmeg.c
 server.o:server.c lib/pthreadpool.h
 	g++ -c server.c
 
